# NLP-Project

./: .vercelignore  1.py  DEPLOYMENT.md  README.md  app.py  best_student_performance_model.pkl  deploy_app.py  label_encoders.pkl  ml_pipeline.py  model_info.pkl  predict_score.py  pyproject.toml  requirements.txt  scaler.pkl  streamlit_app.py  student_performance_model.pkl  vercel.json  web_app.py
api/: index.py
