[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "student-performance-predictor"
version = "1.0.0"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "scikit-learn>=1.3.2",
    "flask>=3.0.0",
    "setuptools>=68.0.0"
]
requires-python = ">=3.9"